fix problem verticaltab on mac

--- a/floorp/browser/themes/designs/options/native-verticaltab-hover.css
+++ b/floorp/browser/themes/designs/options/native-verticaltab-hover.css
@@ -48,6 +48,16 @@
   
 }
 
+@media (-moz-platform: macos) {
+  #TabsToolbar {
+    margin-right: 20px;
+  }
+
+  #appcontent {
+    margin-left: -20px;
+  }
+}
+
 @media (-moz-platform: linux) {
   #TabsToolbar {
     background-color: var(--lwt-accent-color) !important;
