Add reboot prompt for favicon colored tabbar setting

--- a/floorp/browser/components/preferences/design.inc.xhtml
+++ b/floorp/browser/components/preferences/design.inc.xhtml
@@ -99,7 +99,7 @@
       <radio value="4" class="tabbar" data-l10n-id="tabbar-on-bottom" />
     </radiogroup>
 
-    <checkbox preference="floorp.titlebar.favicon.color" id="faviconColor" data-l10n-id="tabbar-favicon-color" />
+    <checkbox preference="floorp.titlebar.favicon.color" id="faviconColor" data-l10n-id="tabbar-favicon-color" class="needreboot" />
   </groupbox>
 
   <groupbox data-category="paneDesign" id="bookmarkBarGroup" hidden="true">
