--- a/floorp/browser/base/content/browser-floorp.css
+++ b/floorp/browser/base/content/browser-floorp.css
@@ -279,7 +279,7 @@
   display: none;
 }
 
-:root[invisibleBMS] #sidebar2-box {
+:root[invisibleBMS] .browser-sidebar2 {
   max-width: 0px !important;
   min-width: 0px !important;
   border: unset !important;
