Bug 1909298 - Test webRequest.getSecurityInfo() without permission r=…
…rpl, a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D217450

--- a/toolkit/components/extensions/test/mochitest/test_ext_webrequest_getSecurityInfo.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_webrequest_getSecurityInfo.html
@@ -18,7 +18,7 @@ add_task(async function test_getSecurityInfo() {
       permissions: [
         "webRequest",
         "webRequestBlocking",
-        "<all_urls>"
+        "*://example.org/*"
       ],
     },
     async background() {
@@ -92,7 +92,6 @@ add_task(async function test_getSecurityInfo() {
   await extension.unload();
 });
 
-<<<<<<< HEAD
 add_task(async function test_getSecurityInfo_without_permission() {
   const extension = ExtensionTestUtils.loadExtension({
     temporarilyInstalled: true, // Needed for granted_host_permissions
@@ -149,8 +148,6 @@ add_task(async function test_getSecurityInfo_without_permission() {
   await extension.unload();
 });
 
-=======
->>>>>>> parent of 46a6b702a9 ( Bug 1909298 - Test webRequest.getSecurityInfo() without permission r=…)
 </script>
 
 </body>
