new and update components for Midori esr128

--- a/floorp/browser/base/content/browser-bms-window.css
+++ b/floorp/browser/base/content/browser-bms-window.css
@@ -1,15 +1,7 @@
-/* This Source Code Form is subject to the terms of the Mozilla Public
- * License, v. 2.0. If a copy of the MPL was not distributed with this
- * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
-
 
 /* Toolbars***************************************************************/
 
-toolbar {
-  display: none !important;
-}
-
-#titlebar {
+#titlebar, toolbar {
   display: none !important;
 }
 
@@ -44,5 +36,10 @@ toolbar {
 }
 
 #context-sep-screenshots {
+  display: none !important;
+}
+
+/* others *************************************************************/
+#statuspanel {
   display: none !important;
 }
